# lib_template

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  concept.md  implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
packaging/: README.md
packaging/brew/Formula/: bitranox-template-py-cli.rb  lib-template.rb
packaging/conda/recipe/: meta.yaml
packaging/nix/: flake.nix
scripts/: build.py  push.py  test.py
src/lib_template/: __init__.py  __init__conf__.py  __main__.py  cli.py  lib_template.py
tests/: test_basic.py  test_scripts.py
