[project]
name = "lib_template"
version = "0.1.0"
description = "Rich-powered logging helpers for colorful terminal output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.7", "click>=8.1", "lib_cli_exit_tools>=0"]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["logging", "rich", "cli", "terminal", "ansi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/lib_template"
Repository = "https://github.com/bitranox/lib_template.git"
Issues = "https://github.com/bitranox/lib_template/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "pyright>=1.1",
  "build>=1.2",
  "twine>=5.1",
  "codecov>=2.1.13",
  "textual>=0.50",
]

[project.scripts]
lib_template = "lib_template.cli:main"
lib-template = "lib_template.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/lib_template"]
include = ["src/lib_template/py.typed"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "scripts/menu.py",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/lib_template"]

[tool.coverage.report]
omit = [
  "tests/*",
  "packaging/*",
  "src/lib_template/__init__conf__.py",
]
fail_under = 80
show_missing = true
